--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Jack's Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Jack Hu</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -27,10 +27,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills & Projects <b>(WIP)</b></a></li>
                 </ul>
             </div>
         </nav>
@@ -40,19 +38,25 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Jack
+                        <span class="text-primary">Hu</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        0405090726・
+                        <a href="mailto:name@email.com">1997hzp@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">
+                    📌Jack is a self-motivated and experienced professional automation engineer with a proven record of developing and maintaining automation frameworks, understanding test strategies and agile testing practises.
+                    He also has extensive experience with various industrial tools that enable his deliverables to align with clients' needs in a continuous delivery environment.
+                    <br><br>
+                    📌Jack works well both independently and as part of a team with a strong adaptability to changes to ensure successful IT project deliveries.
+                    He is also client-focused and throughout his career, he has honed valuable stakeholder management skills to work effectively.
+                    <br><br>
+                    <b>*Resume & references available upon request.</b>
+                    </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/hzp1997"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Ravenite-0?tab=repositories"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,35 +67,69 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Automation Engineer</h3>
+                            <div class="subheading mb-3">NCS Australia</div>
+                            <p>
+                                Capabilities:<br>
+                                📌Liaising with clients on test preparations and preparing test prerequisites.<br>
+                                📌Functional & Automation testing with automation frameworks.<br>
+                                📌Triaging test defects and provide client feedback on improving business processes based on report data.<br>
+                                <br>
+                                Responsibilities:<br>
+                                📌Supported a client in the government sector with both functional & automated testing:<br>
+                                ⮞Preparing test scenarios, test cases, as well as test data based on business requirements.<br>
+                                ⮞Functional testing as well as proof of concept testing for automation opportunities.<br>
+                                ⮞Built and maintained an automation framework using Playwright (Typescript) for regression testing and defect reporting.<br>
+                                ⮞Documenting all test information for each releases in agile via Microsoft Azure.
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Automation Consultant</h3>
+                            <div class="subheading mb-3">AccessHQ</div>
+                            <p>
+                                Capabilities:<br>
+                                📌Establishing automation frameworks that assist client deliveries by saving regression resources.<br>
+                                📌Triaging test defects with clients and team members with various tools.<br>
+                                <br>
+                                Responsibilities:<br>
+                                📌Supported a client in the entertainment industry by performing UI automated testing via Python.<br>
+                                📌Built an automation framework for a client in insurance sector using C#:<br>
+                                    ⮞Covered both frontend and backend automation using RestSharp and Selenium respectively.<br>
+                                    ⮞Integrating automation framework with CI/CD using Microsoft Azure for regression and daily reporting.<br>
+                                    ⮞Keeping framework up-to-date with new features and requirements, and thoroughly document them.<br>
+                                    ⮞Ensuring that rest of the automation team understood all framework changes and how to utilize them.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2019 - July 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Code Camp Participant (Apparenticeship)</h3>
+                            <div class="subheading mb-3">AccessHQ</div>
+                            <p>
+                                Participated in a 7-day long code camp learning about Automation & DevOps:<br>
+                                📌 Learning SDLC and basic CI/CD.<br>
+                                📌 Understanding and applying Version Control using Git & Maven.<br>
+                                📌 Manual API testing using Australia Post's PAC API Key.<br>
+                                📌 Automation with Selenium using Java and C#.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2019 - October 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Digital Trust Consultant</h3>
+                            <div class="subheading mb-3">PwC Australia</div>
+                            <p>
+                                📌 Analyzing system configurations & policies to validate their accuracy, completeness, & effectiveness.<br>
+                                📌 Analyzing system data to validate if users are being terminated accurately & timely.<br>
+                                📌 Reviewing system & IT processes to assess the maturity level of the respective security measures.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2019 - June 2019</span></div>
                     </div>
                 </div>
             </section>
@@ -99,23 +137,31 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Certifications</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">ISTQB Certified Tester</h3>
+                            <div class="subheading mb-3">Foundation Level</div>
+                            <div>ANZTB</div>
+                            <p>Credential ID 8122273</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Industrial-Based Learning (IBL) Scholarship</h3>
+                            <div class="subheading mb-3">Monash University</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2019 - June 2019</span></div>
+                    </div>
+                    <br>
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Monash University</h3>
+                            <div class="subheading mb-3">Bachelor of Information Technology</div>
+                            <p>GPA: 3.334 (Distinction)</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2016 - July 2019</span></div>
                     </div>
                 </div>
             </section>
@@ -161,61 +207,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
