--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             <div class="flex-shrink-0 subheading"><span class="text-primary">September 2025 - December 2025</span></div><br>
                             <p>
                                 <b>Challenge:</b><br>
-                                The University of Melbourne is working on multiple built and developing applications to integrate with Salesforce CRM to provide a better experience for students and staffs on campus.<br>
-                                The team needs an automation engineer that was able to create and maintain scalable test scripts across multiple projects through releases, as well as optimizing existing the framework.<br>
+                                The University of Melbourne is working on multiple built and developing applications to integrate with Salesforce CRM to provide a better experience for students and staff on campus.<br>
+                                The team needed an automation engineer that was able to create and maintain scalable test scripts across multiple projects through releases, as well as optimize the existing frameworks.<br>
                                 <br>
                                 <b>Responsibilities & Achievements:</b><br>
                                 ① Optimising test execution run time for automated tests in Selenium C#.<br>
@@ -115,7 +115,7 @@
                                 ① Test preparation, design, and analysis during releases by writing test cases & scenarios.<br>
                                 ② Functional testing of prepared tests in test environment, and triage any defects via Jira.<br>
                                 ③ Created a proof of concept automation framework for their platform, and provided insights to stakeholders on automating all their integrated applications.<br>
-                                ④ Creating automated test scripts and maintained the automation framework using Microsoft Playwright (Typescript).<br>
+                                ④ Created automated test scripts and maintained the automation framework using Microsoft Playwright (Typescript).<br>
                                 ⑤ Regression testing that includes over 300 test cases for one application every release, reducing manual regression effort by 3-4 days.<br>
                                 <br>
                                 <b>Technologies Used:</b><br>
@@ -128,7 +128,7 @@
                             <p>
                                 <b>Challenge:</b><br>
                                 The client is working on a multi-year digital transformation project that aims to migrate their core business to Oracle OHI and Microsoft Dynamics that integrates with their backend systems.
-                                Thourough testing is needed to ensure that the new system goes live successfully with minimum defects.<br>
+                                Thorough testing is needed to ensure that the new system goes live successfully with minimum defects.<br>
                                 <br>
                                 <b>Responsibilities & Achievements:</b><br>
                                 ① Rest API testing via Postman.<br>
@@ -148,7 +148,7 @@
                                 The client is testing their new remote controller product that is able to interact with a TV monitor through imitating end-to-end user interactions with a SmartTV.<br>
                                 <br>
                                 <b>Responsibilities & Achievements:</b><br>
-                                ① Creating and maintaining end-to-end automation test scripts to ensure that the product functions as per the hardware intended<br>
+                                ① Creating and maintaining end-to-end automation test scripts to ensure that the product functions as per the intended hardware.<br>
                                 ② Triage any defects found during automation test script executions.<br>
                                 <br>
                                 <b>Technologies Used:</b><br>
