--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 ① Test preparation and test scenario analysis.<br>
                                 ② Liaising with stakeholders on automation viability, creating proof of concept tests for demonstration.<br>
                                 ③ Creating automation frameworks and test scripts.<br>
-                                ④ Creating CI/CD pipelines and conduct regression testing.
+                                ④ Creating CI/CD pipelines and conducting regression testing.
                                 ⑤ Triaging test results to ensure test results align with business.<br>
                                 ⑥ Framework maintenance to ensure automation framework constantly aligns with project releases in Agile environments.<br>
                                 <br>
@@ -108,7 +108,7 @@
                             <div class="flex-shrink-0 subheading"><span class="text-primary">July 2023 - December 2025</span></div><br>
                             <p>
                                 <b>Challenge:</b><br>
-                                The Department of Transport & Planning (DTP) is looking for testers to assist with their releases for an integrated platform in the Land Use Victoria (LUV) team.
+                                The Department of Transport & Planning (DTP) is looking for testers to assist with their QA process for an integrated platform in the Land Use Victoria (LUV) team.
                                 The team is facing constant releases and tight resources, therefore looking at ways to optimise the QA process.<br>
                                 <br>
                                 <b>Responsibilities & Achievements:</b><br>
@@ -179,12 +179,12 @@
                             <div class="subheading mb-3">PwC Australia</div>
                             <p>
                                 <b>Role Summary:</b><br>
-                                ① Understanding security vulnerabilities within client's IT processes and propose any recommended solutions.<br>
+                                ① Understanding security vulnerabilities within clients' IT processes and propose any recommended solutions.<br>
                                 ② Communicate with stakeholders to obtain data for analysis through the FAIR industrial framework.<br>
                                 ③ Assessed the maturity level of clients' existing security processes with recommendations provided on how maturity levels could be raised.<br>
                                 <b>Achievements:</b><br>
                                 ① Identified significant gaps in data and security vulnerabilities within client organisations<br>
-                                ② Follow up fixes led to substantial improvements in data security and filled out missing information, ensuring that all necessary data was accounted for and secured<br>
+                                ② Follow-up fixes led to substantial improvements in data security and filled out missing information, ensuring that all necessary data was accounted for and secured.<br>
                                 ③ Enhanced organisational data integrity and security measures.
                                 ④ Created scripts and functions in Microsoft Excel that greatly optimises data analysis processes for the team.
                             </p>
